add s3 to the project

--- a/app-info.json
+++ b/app-info.json
@@ -1,1 +1,1 @@
-{"pages":["Home"],"title":"SVG Puppets","prefix":"","name":"SVGPuppets","cdn":"local","libraries":[],"plugins":[],"details":""}
+{"pages":["Home"],"title":"SVG Puppets","prefix":"","hideheader":[],"name":"SVGPuppets","cdn":"local","libraries":["d3"],"plugins":[],"app-id":"","app-version":"","app-title":"","app-desc":"","app-author":"","app-author-email":"","app-url":"","headtags":"","data-app-id":"","data-account-id":"","data-db-name":""}
